[gd_scene load_steps=5 format=3 uid="uid://c3f1o5m580aum"]

[ext_resource type="Texture2D" uid="uid://t0s2vvl2tru4" path="res://Untitled.png" id="1_fhtr5"]
[ext_resource type="Script" path="res://Trivia.gd" id="1_xql8k"]
[ext_resource type="Texture2D" uid="uid://70unkr46ygy4" path="res://Win.png" id="3_k3xs6"]
[ext_resource type="Texture2D" uid="uid://d1rmhc5b4uyn2" path="res://Question Background.png" id="4_gu8ai"]

[node name="Trivia" type="Node2D"]
script = ExtResource("1_xql8k")

[node name="Timer" type="Timer" parent="."]

[node name="Cover" type="Sprite2D" parent="."]
visible = false
position = Vector2(581.5, 321.5)
scale = Vector2(0.667245, 0.600926)
texture = ExtResource("1_fhtr5")

[node name="MultiBackground" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(578, 321)
scale = Vector2(0.675926, 0.607407)
texture = ExtResource("1_fhtr5")

[node name="MultiWin" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(574.5, 324)
scale = Vector2(0.67419, 0.609259)
texture = ExtResource("3_k3xs6")

[node name="Questions" type="RichTextLabel" parent="."]
offset_left = 119.0
offset_top = 68.0
offset_right = 997.0
offset_bottom = 325.0
theme_override_font_sizes/normal_font_size = 40
text = " Question Here:"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Questions"]
z_index = -1
position = Vector2(421, 131.5)
scale = Vector2(0.55787, 0.302778)
texture = ExtResource("4_gu8ai")

[node name="A" type="RichTextLabel" parent="."]
offset_left = 15.0
offset_top = 379.0
offset_right = 262.0
offset_bottom = 611.0
theme_override_font_sizes/normal_font_size = 35
text = " A)"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="A"]
z_index = -1
position = Vector2(121, 117.5)
scale = Vector2(0.155093, 0.234259)
texture = ExtResource("4_gu8ai")

[node name="A" type="Button" parent="A"]
z_index = -2
layout_mode = 0
offset_right = 247.0
offset_bottom = 231.0
metadata/_edit_use_anchors_ = true

[node name="D" type="RichTextLabel" parent="."]
offset_left = 878.0
offset_top = 381.0
offset_right = 1125.0
offset_bottom = 613.0
theme_override_font_sizes/normal_font_size = 35
text = " D)"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="D"]
z_index = -1
position = Vector2(122.5, 114)
scale = Vector2(0.153356, 0.227778)
texture = ExtResource("4_gu8ai")

[node name="D" type="Button" parent="D"]
z_index = -2
layout_mode = 0
offset_right = 247.0
offset_bottom = 235.0
metadata/_edit_use_anchors_ = true

[node name="C" type="RichTextLabel" parent="."]
offset_left = 599.0
offset_top = 382.0
offset_right = 846.0
offset_bottom = 614.0
theme_override_font_sizes/normal_font_size = 35
text = " C)"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="C"]
z_index = -1
position = Vector2(123.5, 115.5)
scale = Vector2(0.151042, 0.228704)
texture = ExtResource("4_gu8ai")

[node name="C" type="Button" parent="C"]
z_index = -2
layout_mode = 0
offset_right = 250.0
offset_bottom = 233.0
metadata/_edit_use_anchors_ = true

[node name="B" type="RichTextLabel" parent="."]
offset_left = 297.0
offset_top = 381.0
offset_right = 544.0
offset_bottom = 613.0
theme_override_font_sizes/normal_font_size = 35
text = " B)"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="B"]
z_index = -1
position = Vector2(125, 115.5)
scale = Vector2(0.15162, 0.228704)
texture = ExtResource("4_gu8ai")

[node name="B" type="Button" parent="B"]
z_index = -2
layout_mode = 0
offset_right = 250.0
offset_bottom = 233.0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="A/A" to="." method="_on_a_pressed"]
[connection signal="pressed" from="D/D" to="." method="_on_b_pressed"]
[connection signal="pressed" from="C/C" to="." method="_on_c_pressed"]
[connection signal="pressed" from="B/B" to="." method="_on_d_pressed"]
